Fix for RT-29069 - Modena: Text inside TreeTableView cells sits 1 pixel too high

--- a/javafx-ui-controls/src/com/sun/javafx/scene/control/skin/modena/modena.css
+++ b/javafx-ui-controls/src/com/sun/javafx/scene/control/skin/modena/modena.css
@@ -2455,7 +2455,9 @@ is being used to size a border should also be in pixels.
     -fx-indent: 1em;
 }
 .tree-table-cell {
-    -fx-padding: 0.166667em; /* 2px, plus border adds 1px */
+    /* tree-table-cell needs slightly different padding to make the text sit at
+    the right height for the arrow */
+    -fx-padding: 0.25em 0.166667em 0.083emem 0.166667em; /* 3 2 1 2 , plus border adds 1px */
     -fx-background-color: null;
     -fx-border-color: transparent -fx-table-cell-border-color transparent transparent;
     -fx-cell-size: 2.0em; /* 24 */
